group 'rgd.mcw.edu'
version ''

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.8
mainClassName='edu.mcw.rgd.nlp.utils.ncbi.DistributedAnnotator'
String appName='ontomate-tools3'
repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.11'
    implementation fileTree(dir: 'lib', include: '*.jar')
    implementation group: 'org.apache.james', name: 'apache-mime4j-core', version: '0.8.2'


    implementation group: 'aopalliance', name: 'aopalliance', version: '1.0'
  //  implementation group: 'org.ow2.asm', name: 'asm', version: '7.0'
    implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.2'
    implementation group: 'org.aspectj', name: 'aspectjtools', version: '1.9.2'

    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.2'
    implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
    implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.6.0'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.6'

    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'



    implementation group: 'org.apache.ws.commons.axiom', name: 'axiom-api', version: '1.2.21'
    implementation group: 'org.apache.ws.commons.axiom', name: 'axiom-impl', version: '1.2.21'
    implementation group: 'org.apache.axis2', name: 'axis2', version: '1.7.9'
    implementation group: 'org.apache.axis2', name: 'axis2-transport-http', version: '1.7.9'
    implementation group: 'org.apache.axis2', name: 'axis2-transport-local', version: '1.7.9'
    implementation group: 'org.apache.axis2', name: 'axis2-kernel', version: '1.7.9'
    implementation group: 'org.apache.axis2', name: 'axis2-codegen', version: '1.7.9'
   // implementation group: 'org.apache.axis2', name: 'axis2-xmlbeans', version: '1.7.9'
    implementation group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
//    implementation group: 'tomcat', name: 'jasper-implementationr', version: '5.5.23'
//    implementation group: 'tomcat', name: 'jasper-runtime', version: '5.5.23'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'

    implementation group: 'com.sun.jersey', name: 'jersey-core', version: '1.19.4'
    implementation group: 'com.sun.jersey', name: 'jersey-json', version: '1.19.4'
    implementation group: 'com.sun.jersey', name: 'jersey-server', version: '1.19.4'



   /* implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.1'
    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.4.1'*/

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'



    implementation group: 'org.apache.hbase', name: 'hbase-client', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-server', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-common', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-prefix-tree', version: '1.4.8'
    implementation group: 'org.apache.hbase', name: 'hbase-zookeeper', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-mapreduce', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-rest', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-hadoop-compat', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-it', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-protocol', version: '2.1.1'
    implementation group: 'org.apache.hbase', name: 'hbase-hadoop2-compat', version: '2.1.1'


    implementation group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-hdfs-client', version: '3.1.1'

 //   implementation group: 'uk.ac.gate', name: 'gate-core', version: '6.1'
   implementation group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '3.1.1'
   implementation group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-jobclient', version: '3.1.1'
   implementation group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-common', version: '3.1.1'

    implementation group: 'org.apache.hadoop', name: 'hadoop-yarn-api', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-yarn-common', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-yarn-client', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-yarn-server-applicationhistoryservice', version: '3.1.1'

    implementation group: 'org.apache.hadoop', name: 'hadoop-annotations', version: '3.1.1'
    implementation group: 'org.apache.hadoop', name: 'hadoop-client', version: '3.1.1'

    implementation group: 'org.apache.ant', name: 'ant', version: '1.10.5'
    implementation group: 'org.apache.ant', name: 'ant-launcher', version: '1.10.5'


   implementation group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.4.13'
    implementation group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.3.1'

    implementation group: 'org.apache.solr', name: 'solr-common', version: '1.3.0'

    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'


}


//jar {
//    zip64=true
//    baseName = appName
//    manifest {
//        attributes 'Built-By': System.getProperty('user.name'),
//                'Built-Date': new Date(),
//                'Built-JDK': System.getProperty('java.version')
//
//    }
//    from{
//        configurations.compile.collect{it.isDirectory()?it:zipTree(it)}
//    }
//
//}

//distributions {
//    main {
//        baseName = appName
//    }
//}